[INTERNAL] sap.f.DynamicPage: Title growing when pinned on IE fixed
BCP: 1780138621

--- a/src/sap.f/src/sap/f/themes/base/DynamicPage.less
+++ b/src/sap.f/src/sap/f/themes/base/DynamicPage.less
@@ -116,6 +116,10 @@
 }
 
 .sapFDynamicPage .sapFDynamicPageTitleWrapper {
+	display: flex;
+	display: -webkit-flex;
+	flex-direction: column;
+	-webkit-flex-direction: column;
 	flex-shrink: 0;
 	-webkit-flex-shrink: 0;
 }
